# event-loop-project

./: README.md
backend/: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yml  factories.py  manage.py  pyproject.toml  pytest.ini
backend/authorisation_token/: admin.py  apps.py  enums.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/authorisation_token/migrations/: 0001_initial.py  0002_alter_user_managers.py
backend/comments_system/: consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
backend/comments_system/migrations/: 0001_initial.py
backend/deploy/app/: Dockerfile
backend/eventloop/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/users_event/: admin.py  apps.py  enums.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/users_event/migrations/: 0001_initial.py  0002_rename_participants_participant_and_more.py  0003_alter_event_photo.py  0004_rename_is_organizer_event_organizer.py  0005_alter_event_is_passed.py  0006_alter_tag_unique_together.py  0007_participant_sent_email.py  0008_alter_participant_is_organizer.py  0009_bankoperation.py  0010_alter_bankoperation_payment_id.py
backend/web/: admin.py  enums.py  models.py
deploy/: docker-compose.yml
deploy/app/back/: Dockerfile  entrypoint.sh
deploy/app/front/: Dockerfile
frontend/: README.md
frontend/event-loop/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/event-loop/services/: api.js  consts.js  notifications.js  storage.js  (+1 more)
(+66 files in other folders)
